Archive2/95/2ce7775dcf7472/output
main.cpp:6:16: error: character too large for enclosing character literal type
  std::cout << 'க' << '\n';
               ^
main.cpp:7:16: error: character too large for enclosing character literal type
  std::cout << '\u0b95' << '\n';
               ^
2 errors generated.
