Archive2/95/2ce7775dcf7472/main.cpp
#include <iostream>

int main() {
  std::cout << "க\n";
  std::cout << "\u0b95\n";
  std::cout << 'க' << '\n';
  std::cout << '\u0b95' << '\n';
}